# Hose

./: .gitignore  CMakeLists.txt  README.md  pypath.py
source/c_src/Interface/: CMakeLists.txt
source/c_src/Interface/include/: HBasicDefines.h  HBasicSizes.h  HDataAccumulationStruct.h  HNoisePowerFile.h  HNoisePowerFileStruct.h  HNoisePowerHeaderStruct.h  HSpectrumFile.h  HSpectrumFileStruct.h  HSpectrumHeaderStruct.h
source/c_src/Interface/src/: ClearNoisePowerFileStruct.c  ClearSpectrumFileStruct.c  ClearSpectrumObject.c  CopyNoisePowerFileStruct.c  CopySpectrumFileStruct.c  CreateNoisePowerFileStruct.c  CreateSpectrumFileStruct.c  DestroyNoisePowerFileStruct.c  DestroySpectrumFileStruct.c  InitializeNoisePowerFileStruct.c  InitializeSpectrumFileStruct.c  InitializeSpectrumObject.c  ReadNoisePowerFile.c  ReadSpectrumFile.c  ReadSpectrumObject.c  WriteNoisePowerFile.c  WriteNoisePowerObject.c  WriteSpectrumFile.c  WriteSpectrumObject.c
source/cpp_src/CUDAPlugin/: CMakeLists.txt
source/cpp_src/CUDAPlugin/include/: spectrometer.h  spectrometer_signed.h
source/cpp_src/CUDAPlugin/src/: spectrometer_signed.cu
source/cpp_src/CUDASpectrometer/: CMakeLists.txt
source/cpp_src/CUDASpectrometer/include/: noise_statistics_mbp_reduce.h  spectrometer.h  spectrometer_signed.h
source/cpp_src/CUDASpectrometer/src/: noise_statistics_mbp_reduce.cu  spectrometer.cu
source/cpp_src/Core/: CMakeLists.txt
source/cpp_src/Core/include/: HBufferAllocatorBase.hh  HBufferAllocatorMalloc.hh  HBufferAllocatorNew.hh  HBufferMetaData.hh  HBufferPool.hh  HChunkedRingBuffer.hh  HConsumer.hh  HConsumerBufferHandlerPolicy.hh  HConsumerProducer.hh  HDataAccumulation.hh  HDataAccumulationContainer.hh  HDigitizer.hh  HDirectoryWriter.hh  HLinearBuffer.hh  HNetworkDefines.hh  HProducer.hh  HProducerBufferHandlerPolicy.hh  HRegisteringBufferPool.hh  HSpectrumFileStructWrapper.hh  HSpectrumObject.hh  HStateStruct.hh  HThreadPool.hh  HTimeStampConverter.hh  HTimer.hh  HTokenizer.hh  HUnallocatedBufferPool.hh
source/cpp_src/Core/src/: HDirectoryWriter.cc  HThreadPool.cc  HTimeStampConverter.cc  HTimer.cc
source/cpp_src/Devices/: CMakeLists.txt
source/cpp_src/Devices/include/: HADQ7Digitizer.hh  HATS9371BufferAllocator.hh  HATS9371Digitizer.hh  HDummyDigitizer.hh  HDummyDigitizerSigned.hh  HPX14BufferAllocator.hh  HPX14Digitizer.hh  HPX14DigitizerSimulator.hh
source/cpp_src/Devices/src/: HADQ7Digitizer.cc  HATS9371BufferAllocator.cc  HATS9371Digitizer.cc  HDummyDigitizer.cc  HDummyDigitizerSigned.cc  HPX14BufferAllocator.cc  HPX14Digitizer.cc  HPX14DigitizerSimulator.cc
source/cpp_src/Main/: CMakeLists.txt  CrudeOnMinusOff.cc  FitAllMCData.cxx  LaunchSpectrometerDaemon.cc  MultipleScanPairsOnMinusOff.cc  OnMinusOff.cc  OnMinusOffPSD.cc  PowerPlot.cc  PowerSpectralDensity.cc  RawPlot.cc  RealtimeNoisePowerMonitor.cc  RealtimeSpectrumMonitor.cc  RunSpectrometer.cc  SimpleDiodeCalibration.cc  SimpleSpectrumPlot.cc  SpectrumPlot.cc
source/cpp_src/Main/include/: HSpectrometerManager.hh
source/cpp_src/Math/: CMakeLists.txt
source/cpp_src/Math/include/: AngularDistConvolvedWithGaussianIntegrand.hh  AngularDistConvolvedWithGaussianPDF.hh  AngularDistPDF.hh  BoxConvolvedWithGaussian.hh  BoxConvolvedWithGaussianIntegrand.hh  BoxConvolvedWithGaussianPDF.hh  BoxPDF.hh  GSLIntegrationInterface.hh  GaussianPDF.hh
source/cpp_src/Math/src/: AngularDistConvolvedWithGaussianIntegrand.cxx  AngularDistConvolvedWithGaussianPDF.cxx  AngularDistPDF.cxx  BoxConvolvedWithGaussianIntegrand.cxx  BoxConvolvedWithGaussianPDF.cc  BoxPDF.cc  GSLIntegrationInterface.cc  GaussianPDF.cxx
source/cpp_src/MetaData/: CMakeLists.txt
source/cpp_src/MetaData/config/: 1024pts.txt  16384pts.txt  2048pts.txt  32768pts.txt  4096pts.txt  8192pts.txt  default_parameters_adq7.txt  default_parameters_adq7_no_window.txt  nponly_parameters_adq7.txt
source/cpp_src/MetaData/include/: HAntennaPosition.hh  HMetaDataBase.hh  HParameters.hh
source/cpp_src/MetaData/src/: HParameters.cc
source/cpp_src/Operators/: CMakeLists.txt
source/cpp_src/Operators/include/: HArrayScalarMultiplier.hh  HAveragedMultiThreadedSpectrumDataWriter.hh  HBufferAllocatorSpectrometerDataCUDA.hh  HCudaHostBufferAllocator.hh  HDataAccumulationWriter.hh  HPeriodicPowerCalculator.hh  HPointwiseArrayAdder.hh  HPointwiseArrayConjugateMultiplier.hh  (+12 more)
source/cpp_src/Server/: CMakeLists.txt
source/cpp_src/Signal/: CMakeLists.txt
source/cpp_src/Test/: CMakeLists.txt  Makefile  TestADQ7DigitizerInterface.cc  TestADQ7Spectrometer.cc  TestATS9371DigitizerInterface.cc  TestBufferAllocator.cc  TestDummyDigitizer.cc  TestMultiThreadADQ7.cc  TestMultiThreadADQ7Spectrometer.cc  TestMultiThreadATS9371.cc  TestMultiThreadDummy.cc  TestMultiThreadDummyDRF.cc  TestMultiThreadDummySpectrometer.cc  TestMultiThreadDummySpectrometerSigned.cc  TestMultiThreadPX14.cc  TestMultiThreadPX14DRF.cc  TestMultiThreadPX14Spectrometer.cc  TestNoiseGenerator.cc  TestPX14DigitizerInterface.cc  TestParameters.cc  TestPeriodicPowerCalculator.cc  TestServer.cc  TestSpectrumDifference.cc  TestSpectrumPlot.cc  TestSummedNoiseGenerator.cc  TestTimeStampConverter.cc  TestUDPClient.cc  TestUDPServer.cc  TestZMQPublisher.cc  TestZMQSubscriber.cc  benchmark.cu  validate.py
source/python_src/: CMakeLists.txt  setup.py.in
source/python_src/HClient/: HClient.py  HInterface.py  __init__.py
source/python_src/Scripts/: CMakeLists.txt  create-schedule.py.in  hosecc.py.in  hoseclient.py.in
source/python_src/ToFits/: CMakeLists.txt  gpu_fits_plot.py  gpu_read.py  gpu_sdfits.py.in  setup.py.in
source/python_src/hose/: __init__.py  hclient_module.py  hfrontend_module.py  hfslog_module.py  hfsmonitor_module.py  hinfluxdb_module.py  hinterface_module.py  hspeclog_module.py
source/python_src/hosepy/: HInterface.py
source/python_src/scripts/: CMakeLists.txt  capture-encoder-log.py.in  capture-fs-log.py.in  capture-spectrometer-log.py.in  check_luff.py.in  create-meta-data.py.in  create-schedule.py.in  hosecc.py.in  hoseclient.py.in  monitor-spectrometer.py.in  replay-log.py.in  test_freq_conversion.py.in
(+74 files in other folders)
